@@ -97,8 +97,12 @@ public class UserEntry implements Comparable {
 
         final UserEntry userEntry = (UserEntry)o;
 
-		return id == userEntry.id;
-	}
+        if (id != userEntry.id) {
+            return false;
+        }
+
+        return true;
+    }
 
     public int hashCode() {
         return id;
@@ -117,8 +121,8 @@ public class UserEntry implements Comparable {
         id = node.getInt(ATTR_ID);
         name = node.getProperty(ATTR_NAME);
         group = node.getProperty(ATTR_GROUP);
-        online = Boolean.valueOf(node.getProperty(ATTR_ONLINE));
-        power = Boolean.valueOf(node.getProperty(ATTR_POWER));
+        online = new Boolean(node.getProperty(ATTR_ONLINE)).booleanValue();
+        power = new Boolean(node.getProperty(ATTR_POWER)).booleanValue();
     }
 
     public String toString() {
